added unique ID for customerId & orderId.

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-JWT_SECRET=secret_key
+JWT_SECRET=fmXvHeBcCeZohjwu2qJ6kEhvISu+cz4iIZeRGJ3tOj4=
 MONGO_URI=mongodb://localhost:27017/telco-api
