--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "nanoid": "^5.1.5",
     "node-fetch": "^3.3.2",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^11.0.5"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
