--- a/.github/workflows/Audit-Protection.yml
+++ b/.github/workflows/Audit-Protection.yml
@@ -41,7 +41,7 @@ jobs:
               # Upload results to Github Code Scanning
               # upload-to-code-scanning: # optional, default is false
               # If set to 'true', disables all local failure conditions (like minimum score) and fails execution only if the criteria defined in SQGs are not met.
-              # ignore-failures: # optional, default is false
+              ignore-failures: true # optional, default is false
               # Set the root directory for the plugin
               # root-directory: # optional
               # Change the default collection name
