--- a/.github/workflows/Audit-Protection.yml
+++ b/.github/workflows/Audit-Protection.yml
@@ -64,9 +64,10 @@ jobs:
               echo "Audit JSON Report:"
               echo ${{ github.workspace }}/audit-action-report-${{ github.run_id }}.json
               cat ${{ github.workspace }}/audit-action-report-${{ github.run_id }}.json
-              apiId=$(cat ${{ github.workspace }}/audit-action-report-${{ github.run_id }}.json | jq -r '.audit.report."openapi/telco-openapi-protection.json".apiId')
-              echo "API UUID: $apiId"  
-              steps:
+              apiId=$(jq -r '.audit.report["openapi/telco-openapi-protection.json"].apiId' ${{ github.workspace }}/audit-action-report-${{ github.run_id }}.json)
+              echo "API UUID: $apiId"
+              echo "API_UUID=$apiId" >> $GITHUB_OUTPUT
+
           - name: Reconfigure Protection
             id: Reconfigure_Protection
             run: |
@@ -75,5 +76,5 @@ jobs:
               API_UUID=${{ steps.Check_Audit.outputs.API_UUID }}
               PLATFORM_URL=${{ env.platformUrl }}
               curl --location "$PLATFORM_URL/api/v1/apis/$API_UUID/protection" \
-              --header "Content-Type: application/json" \
-              --header "X-API-KEY: ${{ env.X42C_API_TOKEN }}"
+                --header "Content-Type: application/json" \
+                --header "X-API-KEY: ${{ env.X42C_API_TOKEN }}"
